--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -161,11 +161,17 @@
 
 @include tiny-screens {
     .games-card {
+        width: 95%;
+        h3 {
+            text-align: center;
+        }
+
         .btn-group {
             flex-direction: column;
     
             > * {
                 width: 100%;
+                margin-right: 0;
             }
 
             span {
