--- a/scss/components/_mobile-nav.scss
+++ b/scss/components/_mobile-nav.scss
@@ -1,62 +1,37 @@
-.nav-container {
-    > span, > input {
-        display: none;
-    }
+#nav-toggle {
+    display: none;
 }
 
 
 @include mobile-content {    
     .header {
-        position: relative;
-        z-index: 100;
-    }
-    .nav-container{
-        display: block;
-        position: relative;        
-        z-index: 10;
         user-select: none;
 
-        input {
-            display: block;
-            width: 40px;
-            height: 32px;
-            position: absolute;
-            top: -7px;
-            right: -5px;
+        #nav-toggle {
+            color: $white;
+            grid-column: 4;
             cursor: pointer;
-            //opacity: 0; /* hide this */
-            z-index: 2;
-            -webkit-touch-callout: none;
-
-            &:checked {
-                & ~ .header__nav {
-                    opacity: 1;
-                    transform: scaleY(1);
-                    transition: transform 0.5s ease-out;
-                }
-            }
+            display: block;
         }
 
-        .header__nav {
+        &__nav {
             flex-direction: column;
-            position: absolute;
-            width: 96vw;
-            transform-origin: 0 0;
-            transform: scaleY(0);
-            left: -20vw;
-            top: 30px;
-            background: $header-background;
-            transition: transform 0.5s ease-out;
-            opacity: 0;
-            padding: 0 2rem 1rem 2rem;
+            grid-column: 1 / 4;
+            overflow-y: hidden;
+            max-height: 0;
+            transition: all 0.6s ease-out;
+
+            &.active {
+                max-height: 40vh;  
+                padding: 1rem 0;              
+            }
 
             li {
-                padding: 1rem 0;
-                font-size: 22px;
+                margin: 1rem 0 1rem 1rem;
+            }
 
-                a {
-                    color: green;
-                }
+            li:first-child {
+                margin-top: 0;
             }
         }
     }
