--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -40,7 +40,7 @@
         
         &--small {
             width: 100%;
-            padding: 3rem 0;
+            padding: 3rem 0 6rem 0;
             font-size: 1.1rem;
             height: auto;
 
@@ -61,7 +61,7 @@
 
             img {
                 width: 100%;
-                box-shadow: 0 4px 10px 1px rgba(0,0,0,0.3);
+                box-shadow: 0px 0px 25px 10px rgba(0,0,0,0.25);
             }
         }
         
@@ -81,6 +81,10 @@
     .games-transhaping {
         grid-template-columns: 0 auto 0;
 
+        .main-container__content > .btn {
+            margin-bottom: 3rem;
+        }
+
         .section, .section--small {
             padding: 1rem;
         }
@@ -91,6 +95,7 @@
 
             img {
                 order: 1;
+                margin-bottom: 3rem;
             }
         }
     }
