--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -29,7 +29,7 @@
         cursor: pointer;
         width: 90%;
         margin-bottom: 3rem;
-        box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
+        //box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
     }
 
     .section {
