--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -26,7 +26,7 @@
     }
 
     .trailer {
-        cursor: pointer;
+        //cursor: pointer;
         width: 90%;
         margin-bottom: 3rem;
         //box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
