--- a/scss/pages/_games.scss
+++ b/scss/pages/_games.scss
@@ -15,19 +15,13 @@
     }
 }
 
+
 @include tiny-screens {
     .games, .team, .contact {
-        h1 > .shapes-heading {
+        @include shapes-heading {
             &::before, &::after {
-                top: 1rem;
-                width: 1.5rem;
-                height: 1.5rem;
-            }
-            &::before {
-                left: -2.5rem;
-            }
-            &::after {
-                right: -2.5rem;
+                background: transparent;
+                display: none;
             }
         }
     }
