--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -24,6 +24,7 @@ $body-font: 'Source Sans Pro', sans-serif;
         url('../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot?#iefix') format('embedded-opentype'); 
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 $transhaping-font: 'A-DAY-WITHOUT-SUN', 'Montserrat', serif;
