--- a/scss/pages/_frontpage.scss
+++ b/scss/pages/_frontpage.scss
@@ -21,6 +21,10 @@
         
         .hero {
             width: 60%;
+
+            img {
+                width: 100%;
+            }
         }
 
         p {
