--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
   src: url("../assets/fonts/A-DAY-WITHOUT-SUN.ttf.woff") format("woff"), url("../assets/fonts/A-DAY-WITHOUT-SUN.ttf.svg#A-DAY-WITHOUT-SUN") format("svg"), url("../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot"), url("../assets/fonts/A-DAY-WITHOUT-SUN.ttf.eot?#iefix") format("embedded-opentype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 *, *:before, *:after {
@@ -738,6 +739,10 @@ p + p {
 
 .main-container.transhaping-promo .hero {
   width: 60%;
+}
+
+.main-container.transhaping-promo .hero img {
+  width: 100%;
 }
 
 .main-container.transhaping-promo p {
