--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -35,6 +35,7 @@
     .trailer {
         //cursor: pointer;
         width: 70%;
+        height: 315px;
         margin-bottom: 3rem;
         //box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
     }
@@ -92,6 +93,9 @@
             font-size: 6rem;
         }
 
+        .trailer {
+            width: 100%;
+        }
         .main-container__content > .btn {
             margin-bottom: 3rem;
         }
