removing kickstarter links

--- a/css/main.css
+++ b/css/main.css
@@ -877,7 +877,7 @@ p + p {
 .games-transhaping .trailer {
   width: 70%;
   height: 315px;
-  margin-bottom: 3rem;
+  margin-bottom: 15vh;
 }
 
 .games-transhaping .section {
