--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -36,7 +36,7 @@
         //cursor: pointer;
         width: 70%;
         height: 315px;
-        margin-bottom: 3rem;
+        margin-bottom: 15vh;
         //box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
     }
 
