--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -107,6 +107,14 @@
                     }
                 }
             }
+
+            &:nth-child(5)::before {
+                width: 17px;
+                height: 17px;
+                background-image: url('/assets/star.png');
+                background-size: contain;
+                background-repeat: no-repeat;
+            }
         }
     }
 }
