--- a/scss/gen/_vars.scss
+++ b/scss/gen/_vars.scss
@@ -1,6 +1,7 @@
 // colours
 $primary: #4EFF58;
 $primary-alt: #29E133;
+$primary-dark: #018007;
 $primary-light: #F2FFF3;
 $secondary: #29D4FB;
 $header-background: #120C40;
