--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -5,10 +5,7 @@
     font-family: $heading-font;
     transition: all 0.25s ease-out;
     text-align: center;
-
-    &:hover, &:focus {
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-    }
+    border: 2px solid transparent;
 
     &-main {
         background-image: linear-gradient(to right, $secondary 0%, $primary 51%, $secondary 100%);
@@ -25,6 +22,15 @@
             50% { background-position: right; }
             75% { background-position: center; }
             100% { background-position: left center; }
+        }
+    }
+
+    &-secondary {
+        border: 2px solid $primary;
+        color: $primary-dark;
+
+        &:hover, &:focus {
+            background: lighten($primary, 30%);
         }
     }
 
