--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -34,7 +34,8 @@
 
     .trailer {
         //cursor: pointer;
-        width: 70%;
+        max-width: 560px;
+        width: 100%;
         height: 315px;
         margin-bottom: 15vh;
         //box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
@@ -43,7 +44,7 @@
     .section {
         width: 100%;
         padding: 3rem 0;
-        min-height: 60vh;
+        //min-height: 60vh;
         font-size: 1.1rem;
         
         &--small {
