--- a/css/main.css
+++ b/css/main.css
@@ -888,7 +888,7 @@ p + p {
   max-width: 560px;
   width: 100%;
   height: 315px;
-  margin-bottom: 15vh;
+  margin-bottom: 3rem;
 }
 
 .games-transhaping .section {
