--- a/scss/pages/_transhaping.scss
+++ b/scss/pages/_transhaping.scss
@@ -37,7 +37,7 @@
         max-width: 560px;
         width: 100%;
         height: 315px;
-        margin-bottom: 15vh;
+        margin-bottom: 3rem;
         //box-shadow: 0 8px 20px 1px rgba(0,0,0,0.3);
     }
 
