Update image paths

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -111,7 +111,7 @@
             &:nth-child(5)::before {
                 width: 17px;
                 height: 17px;
-                background-image: url('/assets/star.png');
+                background-image: url('assets/star.png');
                 background-size: contain;
                 background-repeat: no-repeat;
             }
